--- a/package.json
+++ b/package.json
@@ -12,10 +12,17 @@
     "dev": "concurrently \"tsc --watch\" \"nodemon dist/index.js\""
   },
   "devDependencies": {
+    "@types/chart.js": "2.9.24",
     "@types/node": "14.6.4",
     "concurrently": "5.3.0",
     "nodemon": "2.0.4",
     "prettier": "2.1.1",
     "typescript": "4.0.2"
+  },
+  "dependencies": {
+    "axios": "0.20.0",
+    "chart.js": "2.9.3",
+    "chartjs-node-canvas": "3.0.6",
+    "express": "4.17.1"
   }
 }
