--- a/package.json
+++ b/package.json
@@ -9,20 +9,23 @@
   "scripts": {
     "build": "yarn run tsc",
     "start": "node dist/index.js",
-    "dev": "concurrently \"tsc --watch\" \"nodemon dist/index.js\""
+    "storybook": "concurrently \"tsc --watch\" \"start-storybook -p 6006\""
   },
   "devDependencies": {
-    "@types/chart.js": "2.9.24",
-    "@types/node": "14.6.4",
-    "concurrently": "5.3.0",
-    "nodemon": "2.0.4",
-    "prettier": "2.1.1",
-    "typescript": "4.0.2"
+    "@storybook/addon-backgrounds": "^6.0.22",
+    "@storybook/client-api": "^6.0.21",
+    "@storybook/html": "^6.1.0-alpha.17",
+    "@types/node": "^14.6.4",
+    "axios-mock-adapter": "^1.18.2",
+    "concurrently": "^5.3.0",
+    "nodemon": "^2.0.4",
+    "prettier": "^2.1.1",
+    "typescript": "^4.0.3"
   },
   "dependencies": {
-    "axios": "0.20.0",
-    "chart.js": "2.9.3",
-    "chartjs-node-canvas": "3.0.6",
-    "express": "4.17.1"
+    "@types/chart.js": "^2.9.24",
+    "axios": "^0.20.0",
+    "canvas": "^2.6.1",
+    "chart.js": "^2.9.3"
   }
 }
