--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "storybook": "concurrently \"tsc --watch\" \"start-storybook -p 6006\""
   },
   "devDependencies": {
-    "@storybook/addon-backgrounds": "^6.0.22",
-    "@storybook/client-api": "^6.0.21",
-    "@storybook/html": "^6.1.0-alpha.17",
+    "@storybook/addon-backgrounds": "^6.0.26",
+    "@storybook/addon-controls": "^6.0.26",
+    "@storybook/client-api": "^6.0.26",
+    "@storybook/react": "^6.0.26",
     "@types/node": "^14.6.4",
     "axios-mock-adapter": "^1.18.2",
     "concurrently": "^5.3.0",
