--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -15,7 +15,7 @@ jobs:
           node-version: 12
           
       - name: Build Storybook
-        run: yarn storybook:build
+      - run: yarn storybook:build
         
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
