--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "scripts": {
     "build": "yarn run tsc --extendedDiagnostics",
     "storybook": "concurrently \"tsc --watch\" \"start-storybook -p 6006\"",
-    "storybook:build": "build-storybook --output-dir ./public/storybook"
+    "storybook:build": "build-storybook --output-dir ./public/storybook",
+    "format": "prettier src stories .storybook",
+    "lint": "eslint --ext .ts,.tsx src stories .storybook"
   },
   "devDependencies": {
     "@storybook/addon-backgrounds": "^6.0.26",
@@ -21,8 +23,11 @@
     "@storybook/client-api": "^6.0.26",
     "@storybook/react": "^6.0.26",
     "@types/node": "^14.6.4",
+    "@typescript-eslint/eslint-plugin": "^4.4.0",
+    "@typescript-eslint/parser": "^4.4.0",
     "axios-mock-adapter": "^1.18.2",
     "concurrently": "^5.3.0",
+    "eslint": "^7.11.0",
     "nodemon": "^2.0.4",
     "prettier": "^2.1.1",
     "typescript": "^4.0.3"
