--- a/package.json
+++ b/package.json
@@ -14,19 +14,24 @@
     "build": "yarn run tsc --extendedDiagnostics",
     "storybook": "concurrently \"tsc --watch\" \"start-storybook -p 6006\"",
     "storybook:build": "build-storybook --output-dir ./public/storybook",
-    "format": "prettier src stories .storybook",
-    "lint": "eslint --ext .ts,.tsx src stories .storybook"
+    "format": "prettier src stories .storybook cypress",
+    "lint": "eslint --ext .ts,.tsx src stories .storybook cypress",
+    "cypress": "cypress run"
   },
   "devDependencies": {
     "@storybook/addon-backgrounds": "^6.0.26",
     "@storybook/addon-controls": "^6.0.26",
     "@storybook/client-api": "^6.0.26",
     "@storybook/react": "^6.0.26",
+    "@types/cypress-image-snapshot": "^3.1.2",
     "@types/node": "^14.6.4",
     "@typescript-eslint/eslint-plugin": "^4.4.0",
     "@typescript-eslint/parser": "^4.4.0",
     "axios-mock-adapter": "^1.18.2",
     "concurrently": "^5.3.0",
+    "cypress": "^5.4.0",
+    "cypress-image-snapshot": "^3.1.1",
+    "cypress-wait-until": "^1.7.1",
     "eslint": "^7.11.0",
     "nodemon": "^2.0.4",
     "prettier": "^2.1.1",
