--- a/.github/workflows/cypress.js.yml
+++ b/.github/workflows/cypress.js.yml
@@ -3,18 +3,27 @@
 name: Cypress Image Snapshots
 on:
   push:
-    branches: [ master ]
+    branches: [master]
   pull_request:
-    branches: [ master ]
+    branches: [master]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - name: Checkout repo
+        uses: actions/checkout@v2
+      - name: Setup node
+        uses: actions/setup-node@v1
         with:
           node-version: 12
-      - run: yarn install
-      - run: yarn storybook:build
-      - run: yarn cypress
+      - name: install, build storybook, and run cypress tests
+        run: |
+          yarn install
+          yarn storybook:build
+          yarn cypress
+      - name: Archive code coverage results
+        uses: actions/upload-artifact@v2
+        with:
+          name: snapshots
+          path: cypress/snapshots/
