--- a/.github/workflows/cypress.js.yml
+++ b/.github/workflows/cypress.js.yml
@@ -24,6 +24,8 @@ jobs:
           yarn cypress
       - name: Archive code coverage results
         uses: actions/upload-artifact@v2
+        if: ${{ failure() }}
         with:
           name: snapshots
           path: cypress/snapshots/
+          retention-days: 14
