--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,10 @@
     "module": "commonjs",
     "outDir": "./dist",
     "lib": ["es2019"],
-    "types": ["node"],
+    "types": ["node", "@types/css-font-loading-module"],
+    "typeRoots": ["node_modules/@types","types"],
     "strict": true,
+    "esModuleInterop": true,
     "noImplicitAny": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
@@ -15,5 +17,5 @@
     "forceConsistentCasingInFileNames": true,
     "declaration": true
   },
-  "include": ["./src"]
+  "include": ["./src", "./types/**/*.d.ts"]
 }
