--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "dependencies": {
     "@types/chart.js": "^2.9.24",
     "axios": "^0.20.0",
+    "axios-cache-adapter": "^2.7.0",
     "canvas": "^2.6.1",
     "chart.js": "^2.9.3",
     "comma-number": "^2.0.1"
