--- a/package.json
+++ b/package.json
@@ -18,37 +18,38 @@
     "prestorybook:build": "yarn run copy-assets",
     "storybook": "concurrently \"tsc --watch\" \"start-storybook -p 6006\"",
     "storybook:build": "build-storybook --output-dir ./public/storybook",
-    "format": "prettier src stories .storybook cypress",
+    "format": "prettier --write src stories .storybook cypress",
     "lint": "eslint --ext .ts,.tsx src stories .storybook cypress",
     "cypress": "cypress run"
   },
   "devDependencies": {
-    "@storybook/addon-backgrounds": "^6.0.26",
-    "@storybook/addon-controls": "^6.0.26",
-    "@storybook/client-api": "^6.0.26",
-    "@storybook/react": "^6.0.26",
+    "@storybook/addon-backgrounds": "^6.4.12",
+    "@storybook/addon-controls": "^6.4.12",
+    "@storybook/client-api": "^6.4.12",
+    "@storybook/react": "^6.4.12",
     "@types/css-font-loading-module": "^0.0.4",
-    "@types/cypress-image-snapshot": "^3.1.2",
+    "@types/cypress-image-snapshot": "^3.1.6",
     "@types/node": "^14.6.4",
     "@typescript-eslint/eslint-plugin": "^4.4.0",
     "@typescript-eslint/parser": "^4.4.0",
-    "axios-mock-adapter": "^1.18.2",
-    "concurrently": "^5.3.0",
+    "axios-mock-adapter": "^1.20.0",
+    "concurrently": "^7.0.0",
     "copyfiles": "^2.4.1",
-    "cypress": "^5.4.0",
-    "cypress-image-snapshot": "^3.1.1",
-    "cypress-wait-until": "^1.7.1",
+    "cypress": "^9.2.1",
+    "cypress-image-snapshot": "^4.0.1",
+    "cypress-wait-until": "^1.7.2",
     "eslint": "^7.11.0",
-    "nodemon": "^2.0.4",
-    "prettier": "^2.1.1",
-    "typescript": "^4.0.3"
+    "prettier": "^2.5.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "typescript": "^4.5.4"
   },
   "dependencies": {
     "@types/chart.js": "^2.9.24",
-    "axios": "^0.20.0",
-    "axios-cache-adapter": "^2.7.0",
-    "canvas": "^2.6.1",
-    "chart.js": "^2.9.3",
+    "axios": "^0.24.0",
+    "axios-cache-adapter": "^2.7.3",
+    "canvas": "^2.8.0",
+    "chart.js": "^2.9.4",
     "comma-number": "^2.0.1",
     "parse-ms": "^3.0.0"
   }
