--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   ],
   "scripts": {
     "copy-assets": "copyfiles --flat src/assets/**/* dist/assets",
-    "build": "yarn run tsc --extendedDiagnostics",
-    "postbuild": "yarn run copy-assets",
-    "prestorybook": "yarn run copy-assets",
-    "prestorybook:build": "yarn run copy-assets",
+    "build": "pnpm run tsc --extendedDiagnostics",
+    "postbuild": "pnpm run copy-assets",
+    "prestorybook": "pnpm run copy-assets",
+    "prestorybook:build": "pnpm run copy-assets",
     "storybook": "concurrently \"tsc --watch\" \"start-storybook -p 6006\"",
     "storybook:build": "build-storybook --output-dir ./public/storybook",
     "format": "prettier --write src stories .storybook cypress",
@@ -23,27 +23,27 @@
     "cypress": "cypress run"
   },
   "devDependencies": {
-    "@storybook/addon-backgrounds": "^6.4.12",
-    "@storybook/addon-controls": "^6.4.12",
-    "@storybook/client-api": "^6.4.12",
-    "@storybook/react": "^6.4.12",
-    "@types/css-font-loading-module": "^0.0.4",
-    "@types/cypress-image-snapshot": "^3.1.6",
-    "@types/node": "^14.6.4",
-    "@typescript-eslint/eslint-plugin": "^4.4.0",
-    "@typescript-eslint/parser": "^4.4.0",
-    "axios-mock-adapter": "^1.20.0",
-    "chart.js": "^2.9.4",
-    "concurrently": "^7.0.0",
-    "copyfiles": "^2.4.1",
-    "cypress": "^9.2.1",
-    "cypress-image-snapshot": "^4.0.1",
-    "cypress-wait-until": "^1.7.2",
-    "eslint": "^7.11.0",
-    "prettier": "^2.5.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "typescript": "^4.5.4"
+    "@storybook/addon-backgrounds": "6.4.12",
+    "@storybook/addon-controls": "6.4.12",
+    "@storybook/client-api": "6.4.12",
+    "@storybook/react": "6.4.12",
+    "@types/css-font-loading-module": "0.0.4",
+    "@types/cypress-image-snapshot": "3.1.6",
+    "@types/node": "14.11.4",
+    "@typescript-eslint/eslint-plugin": "4.4.0",
+    "@typescript-eslint/parser": "4.4.0",
+    "axios-mock-adapter": "1.20.0",
+    "chart.js": "2.9.4",
+    "concurrently": "7.0.0",
+    "copyfiles": "2.4.1",
+    "cypress": "9.2.1",
+    "cypress-image-snapshot": "4.0.1",
+    "cypress-wait-until": "1.7.2",
+    "eslint": "7.11.0",
+    "prettier": "2.5.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "typescript": "4.5.4"
   },
   "dependencies": {
     "@types/chart.js": "^2.9.24",
