--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "es2019",
     "module": "commonjs",
     "outDir": "./dist",
-    "lib": ["es2019"],
+    "lib": ["es2019", "DOM"],
     "types": ["node", "@types/css-font-loading-module"],
     "typeRoots": ["node_modules/@types","types"],
     "strict": true,
