--- a/.github/workflows/cypress.js.yml
+++ b/.github/workflows/cypress.js.yml
@@ -17,6 +17,8 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 12
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
       - name: install, build storybook, and run cypress tests
         run: |
           pnpm install
