--- a/.github/workflows/cypress.js.yml
+++ b/.github/workflows/cypress.js.yml
@@ -19,6 +19,8 @@ jobs:
           node-version: 12
       - name: Setup pnpm
         uses: pnpm/action-setup@v2
+        with:
+          version: 8
       - name: install, build storybook, and run cypress tests
         run: |
           pnpm install
