--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,10 @@
     "ecmaVersion": 2019,
     "sourceType": "module"
   },
-  "extends": ["plugin:@typescript-eslint/recommended"],
+  "extends": [
+    "plugin:@typescript-eslint/recommended",
+    "plugin:storybook/recommended"
+  ],
   "rules": {
     "sort-imports": "error"
   }
