--- a/package.json
+++ b/package.json
@@ -12,24 +12,26 @@
   ],
   "scripts": {
     "copy-assets": "copyfiles --flat src/assets/**/* dist/assets",
-    "build": "pnpm run tsc --extendedDiagnostics",
+    "build": "pnpm tsc --extendedDiagnostics",
     "postbuild": "pnpm run copy-assets",
     "prestorybook": "pnpm run copy-assets",
     "prestorybook:build": "pnpm run copy-assets",
-    "storybook": "concurrently \"tsc --watch\" \"start-storybook -p 6006\"",
-    "storybook:build": "build-storybook --output-dir ./public/storybook",
+    "storybook": "storybook dev -p 6006 --no-open",
+    "storybook:build": "storybook build --output-dir ./public/storybook",
     "format": "prettier --write src stories .storybook cypress",
     "lint": "eslint --ext .ts,.tsx src stories .storybook cypress",
     "cypress": "cypress run"
   },
   "devDependencies": {
-    "@storybook/addon-backgrounds": "6.4.12",
-    "@storybook/addon-controls": "6.4.12",
-    "@storybook/client-api": "6.4.12",
-    "@storybook/react": "6.4.12",
+    "@storybook/addon-backgrounds": "7.4.0",
+    "@storybook/addon-controls": "7.4.0",
+    "@storybook/client-api": "7.4.0",
+    "@storybook/react": "7.4.0",
+    "@storybook/react-vite": "7.4.0",
     "@types/css-font-loading-module": "0.0.4",
     "@types/cypress-image-snapshot": "3.1.6",
     "@types/node": "14.11.4",
+    "@types/react": "17.0.2",
     "@typescript-eslint/eslint-plugin": "4.4.0",
     "@typescript-eslint/parser": "4.4.0",
     "axios-mock-adapter": "1.20.0",
@@ -40,10 +42,13 @@
     "cypress-image-snapshot": "4.0.1",
     "cypress-wait-until": "1.7.2",
     "eslint": "7.11.0",
+    "eslint-plugin-storybook": "0.6.13",
     "prettier": "2.5.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "typescript": "4.5.4"
+    "storybook": "7.4.0",
+    "typescript": "5.2.2",
+    "vite": "4.4.9"
   },
   "dependencies": {
     "@types/chart.js": "^2.9.24",
