Fix the publish action

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -22,6 +22,6 @@ jobs:
           version: 8
       - run: pnpm install
       - run: pnpm run build
-      - run: pnpm run publish
+      - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
